# OnlineDisk

TcpClient/: TcpClient.pro  download.cpp  download.h  download_dialog.cpp  download_dialog.h  download_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.cpp  md5.h  upload.cpp  upload.h  upload_dialog.cpp  upload_dialog.h  upload_dialog.ui
disk/: README
disk/chunk/: CMakeLists.txt  chunk.cc  client.cc  client.h
disk/chunk2/: CMakeLists.txt  build.sh  chunk.cc  client.cc
disk/master/: CMakeLists.txt  build.sh  master.cc
